--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "tsx watch ./src/main.ts",
+    "build": "tsup ./src --format esm",
+    "start": "node ./dist/main.mjs",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint .",
@@ -24,6 +27,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
+    "tsup": "^8.0.2",
     "tsx": "^4.7.2",
     "typescript": "^5.4.5"
   },
