--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch ./src/main.ts",
+    "dev": "tsx watch --env-file .env ./src/main.ts",
     "build": "tsup ./src --format esm",
     "start": "node ./dist/main.mjs",
     "test": "jest",
@@ -32,6 +32,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "zod": "^3.22.4"
   }
 }
